--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -557,7 +557,7 @@ img {
   padding: 15px;
   border: 1px solid rgba(152, 152, 152, 0.4);
   background: #fff;
-  margin: -6px;
+  margin: -2.19px;
   outline: none;
   color: #6e6e6f;
   font-size:  13px;
@@ -949,6 +949,11 @@ input[type="password"]:focus  {
 label {
   letter-spacing: 0.05em;
   margin-left: 15px;
+}
+
+#getstarted ::-webkit-input-placeholder {
+  opacity: 1;
+  transition: inherit;
 }
 input:placeholder-shown + label {
   cursor: text;
