--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -696,6 +696,28 @@ list-style-type:none;
   0% { opacity: 0; }
 }
 
+.row-mob-login{
+  padding: 20px;
+  background: #5c25dd;
+  color:  #fff;
+  font-weight:  700;
+  margin-left:  -10px;
+  margin-right: -10px;
+  position: fixed;
+  top: 0%;
+  left: 0;
+  display: none;
+  width: 112%;
+}
+.row-mob-login i{
+  display: inline;
+  padding-right: 20px;
+  padding-left: 10px;
+}
+.row-mob-login p{
+  display: inline;
+}
+
 /* Input Form Design */
 @media(min-width:1199px) and (max-width:1410px){
   #sidekick{
@@ -771,6 +793,33 @@ list-style-type:none;
   .carousel-control{
     display: none;
   }
+  .swiper-button-next{
+    display: none;
+  }
+  .swiper-button-prev{
+    display: none;
+  }
+  .modal-dialog-centered{
+    min-height: 0;
+    margin-top: -2px;
+  }
+  .modal{
+    background: #fff;
+  }
+  .modal-body{
+    box-shadow: none !important;
+    background: #fff !important; 
+  }
+  .modal-content{
+    border: 0;
+    height: 100vh;
+  }
+  .modal-content .row{
+    margin-top:64px !important;
+  }
+  .row-mob-login{
+    display: block;
+  }
 }
 @media (max-width:556px){
   #companies-logo {
@@ -845,7 +894,7 @@ list-style-type:none;
   padding:10px;
   border: 1px solid#e4e3e3;
   outline:none;
-  width: 100%;
+  width: 99%;
   margin: 3px;
   height: 70px;
   padding-bottom: 0px;
